--- a/docker/dockerfile/001-html-web-app/web-app/index.html
+++ b/docker/dockerfile/001-html-web-app/web-app/index.html
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top">DevOps Engineer - Sample WebPage - v1.0</a>
+                <a class="navbar-brand" href="#page-top">AWS and AZURE Engineer - Updated WebPage - v2.0</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
