updated docker project

--- a/docker/docker-projects/002-studentapp/student-frontend/index.html
+++ b/docker/docker-projects/002-studentapp/student-frontend/index.html
@@ -42,26 +42,31 @@
       const city = formData.get('city');
       const age = formData.get('age');
 
-      fetch('http://localhost:5001/save-student-data', {
-        method: 'POST',
-        headers: {
+      fetch('http://localhost:9300/save-student-data', {
+      method: 'POST',
+      headers: {
         'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({
-          name,
-          city,
-          age,
-        }),
-      })
-        .then((response) => response.json())
-        .then((data) => {
-          studentDataDiv.innerHTML = `
-            <p>Name: ${data.name}</p>
-            <p>City: ${data.city}</p>
-            <p>Age: ${data.age}</p>
-          `;
-        });
+      },
+      body: JSON.stringify({
+        name,
+        city,
+        age,
+      }),
+    })
+    .then((response) => {
+      if (response.status === 200) {
+        studentDataDiv.innerHTML = `<p>Student data saved successfully!</p>`;
+      }
+      return response.json();
+    })
+    .then((data) => {
+      studentDataDiv.innerHTML = `
+        <p>Name: ${data.name}</p>
+        <p>City: ${data.city}</p>
+        <p>Age: ${data.age}</p>
+      `;
     });
+
   </script>
 </body>
 </html>
