--- a/docker/docker-projects/002-studentapp/student-frontend/index.html
+++ b/docker/docker-projects/002-studentapp/student-frontend/index.html
@@ -55,7 +55,7 @@
       })
       .then((response) => {
         if (response.status === 200) {
-          studentDataDiv.innerHTML = `<p>Student data saved successfully!</p>`;
+          studentDataDiv.innerHTML = `<br> <p>Student data saved successfully!</p>`;
         }
         return response.json();
       })
